--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "OOP and testing for Module 10 Challenge",
   "main": "app.js",
   "directories": {
-    "lib": "lib",
-    "test": "test"
+    "lib": "lib"
   },
   "scripts": {
     "test": "jest --verbose",
@@ -19,5 +18,13 @@
   },
   "devDependencies": {
     "jest": "^24.8.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Zzaclipse/theTerrificTeamProfileGenerator.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Zzaclipse/theTerrificTeamProfileGenerator/issues"
+  },
+  "homepage": "https://github.com/Zzaclipse/theTerrificTeamProfileGenerator#readme"
 }
